package com.raizesdonordeste.api.domain.enums;

public enum CanalPedido {
  APP,
  TOTEM,
  BALCAO,
  PICKUP,
  WEB
}

