package com.raizesdonordeste.api.domain.enums;

public enum FormatoOperacao {
  COMPLETO,
  REDUZIDO
}

