package com.raizesdonordeste.api.domain.enums;

public enum PerfilUsuario {
  ADMIN,
  GERENTE,
  ATENDENTE,
  COZINHA,
  CLIENTE
}

