package com.raizesdonordeste.api.domain.enums;

public enum StatusPagamento {
  PENDENTE,
  APROVADO,
  RECUSADO
}

