package com.raizesdonordeste.api.domain.enums;

public enum StatusPedido {
  AGUARDANDO_PAGAMENTO,
  PAGO,
  EM_PREPARO,
  PRONTO,
  ENTREGUE,
  CANCELADO
}

